--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -78,6 +78,9 @@ jobs:
           name: python-app
           path: .
 
+      - name: Azure Login
+        uses: Azure/login@v2.1.1
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
