--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,76 @@
-cs50 == 9.3.4
-Flask-Session == 0.8.0
-
-# ML Libraries
-numpy == 2.0.1
-pandas == 2.2.2
-scikit-learn == 1.5.1
-joblib == 1.4.2
-imblearn == 0.0
+alembic==1.13.2
+asttokens==2.4.1
+bcrypt==4.2.0
+black==24.4.2
+blinker==1.7.0
+cachelib==0.13.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cs50==9.3.4
+cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
+executing==2.0.1
+Flask==3.0.2
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
+Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
+fonttools==4.49.0
+greenlet==3.0.3
+imbalanced-learn==0.12.3
+imblearn==0.0
+indexed-priority-queue==0.1.1
+ipykernel==6.29.5
+ipython==8.26.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+Mako==1.3.5
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.7
+msgspec==0.18.6
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+numpy==2.0.1
+packaging==23.2
+pandas==2.2.2
+parso==0.8.4
+pathspec==0.12.1
+pillow==10.2.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psutil==6.0.0
+pure_eval==0.2.3
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pywin32==306
+pyzmq==26.2.0
+scikit-learn==1.5.1
+scipy==1.14.1
+six==1.16.0
+SQLAlchemy==2.0.28
+sqlparse==0.5.1
+stack-data==0.6.3
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.10.0
+tzdata==2024.1
+wcwidth==0.2.13
+Werkzeug==3.0.1
+wheel==0.44.0
+WTForms==3.1.2
